--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -10,4 +10,16 @@
     <welcome-file>default.jsp</welcome-file>
     <welcome-file>login.jsp</welcome-file>
   </welcome-file-list>
+  <error-page>
+  	<exception-type>java.lang.Exception</exception-type>
+  	<location>/error.html</location>
+  </error-page>
+  <error-page>
+  	<error-code>404</error-code>
+  	<location>/404.html</location>
+  </error-page>
+  <error-page>
+  	<error-code>500</error-code>
+  	<location>/error.html</location>
+  </error-page>
 </web-app>
